# csort

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
core/: core.c  core.h
scripts/: bubblesort  insertionsort  mergesort  quicksort_default  quicksort_qsort  run_all  run_all_100  run_all_1000  run_all_10000  run_all_100000  run_all_1000000  selectionsort
sort/: sort.c  sort.h
